force-app/main/default/objects/iManage_Folder_Setting__mdt/iManage_Folder_Setting__mdt.object-meta.xml
<CustomObject>
    <label>iManage Folder Setting</label>
    <pluralLabel>iManage Folder Setting</pluralLabel>
</CustomObject>