force-app/main/default/objects/iManage_Folder_Setting__mdt/fields/Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Folder_Id__c</fullName>
    <label>Folder_Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>