force-app/main/default/objects/iManage_Folder_Setting__mdt/fields/Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Jurisdiction__c</fullName>
    <label>Jurisdiction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>