force-app/main/default/objects/iManage_Folder_Setting__mdt/fields/Matter__c.field-meta.xml
<CustomField>
    <fullName>Matter__c</fullName>
    <label>Matter</label>
    <length>100</length>
    <type>Text</type>
</CustomField>