force-app/main/default/objects/iManage_Folder_Setting__mdt/fields/Workspaces__c.field-meta.xml
<CustomField>
    <fullName>Workspaces__c</fullName>
    <label>Workspaces</label>
    <length>50</length>
    <type>Text</type>
</CustomField>