force-app/main/default/objects/iManage_Folder_Setting__mdt/fields/WorkspaceSubcase__c.field-meta.xml
<CustomField>
    <fullName>WorkspaceSubcase__c</fullName>
    <label>WorkspaceSubcase</label>
    <length>50</length>
    <type>Text</type>
</CustomField>